static/styles/twodsix.css
/* ... */
.vehicle-weight, .sensors-power {
  grid-area: col4;
}

.available-weight, .weapons-power {
  grid-area: col5
}

.power-title {
  color: black;
  font-weight: bold;
  /* position: relative; */
  /* width: 289px; */
  left: 11%;
  border-bottom: none;
  font-size: 2.5ch;
  /* padding: 4px; */
  /* top: -95%; */
  grid-area: title;
  align-self: center;
}

.ship-power-used, .ship-power-avail {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

.ship-power-used {
  justify-content: flex-start;
  grid-area: used;
  height: 5ch;
}

.ship-power-avail {
  justify-content: center;
  grid-area: avail;
  height: 5ch;
}

.ship-stat-finance {
  display: flex;
  align-items: center;
  justify-content: space-between;
  text-align: left;
}

.ship-stat-finance input {
  text-align: right;
  width: 12ch;
}

.ship-stat input[type="number"] {
  text-align: center;
  /* width: 53px; */
  background-color: transparent;
  border: none;
  height: auto;
  /* margin-top: 5px; */
}

.small-font {
  font-size: 10px;
  /* margin-top: -2em; */
}

.red {
  color: var(--s2d6-damage-red);
}

.orange, .orange input, input.item-value-edit.orange {
  color: var(--s2d6-damage-orange);
}

.ship-stat .red input[type="number"] {
  color: var(--s2d6-damage-red);
}

input.power-current.red, input.available-weight.red {
  color: var(--s2d6-damage-red);
}

/*--- Labels ---*/

span.ship-power-label {
  /* display: block; */
  /* width: 75px; */
  font-size: 2ch;
  /* text-align: center; */
  /* position: relative; */
  /* top: -23%; */
  grid-area: pow;
  align-self: center;
}

span.power-now, span.power-max {
  font-size: 1ch;
}

/*--- Input Fields ---*/

input.power-current, input.power-total {
  font-size: 2ch;
  border: none;
  background-color: transparent;
  text-align: center;
}

/*------------------*/

/* ============================================================================
   SECTION-12: SHIP TABS
   ============================================================================ */

.ship-tabs {
  width: 120%;
  width: -webkit-fill-available;
  margin-left: -25%;
  margin-right: 7%;
  height: 100%;
  grid-area: ship-tabs;
  display: flex;
  justify-content: space-evenly;
}

a.ship-positions-tab, a.ship-crew-tab, a.ship-storage-tab, a.ship-component-tab, a.ship-cargo-tab, a.ship-finance-tab, a.ship-notes-tab {
  height: 100%;
  line-height: normal;
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: var(--s2d6-default-color);
  align-items: center;
}

a.ship-crew-tab:hover, a.ship-positions-tab:hover, a.ship-storage-tab:hover, a.ship-cargo-tab:hover, a.ship-finance-tab:hover, a.ship-component-tab:hover, a.ship-notes-tab:hover {
  color: var(--s2d6-item-hover);
}

a.ship-crew-tab.active, a.ship-positions-tab.active, a.ship-storage-tab.active, a.ship-cargo-tab.active, a.ship-finance-tab.active, a.ship-component-tab.active, a.ship-notes-tab.active {
  color: var(--s2d6-item-active);
  text-shadow: none !important; /*necessary*/
  background-color: var(--s2d6-default-color);
  padding: 2ch 1ch;
}

.ship-tabs-info.sheet-body {
  z-index: 99;
  /* position: absolute; */
  top: 53%;
  height: 91%;
  width: 98%;
  overflow-y: auto;
  overflow-x: auto;
  grid-area: ship-data;
  margin-top: 8px;
}

.ship-grid {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  gap: 1ch;
}

.ship-positions-grid {
  justify-content: space-evenly;
  display: flex;
  row-gap: 1em;
  flex-direction: row;
  flex-wrap: wrap;
}

.tab.ship-crew, .tab.ship-positions {
  width: 97%;
  padding-left: 3%;
  padding-right: 2%;
  margin-top: 2%;
  overflow: auto;
}

.ship-position-delete, .ship-position-edit, .ship-position-copy {
  float: right;
  margin-top: 4px;
  margin-right: 4px;
  cursor: pointer;
}

.ship-position-box {
  width: 29ch;
  border: var(--s2d6-groove-border);
  min-height: 6ch;
  border-radius: 0;
  display: flex;
}

.ship-position-add-box {
  text-align: center;
  min-height: 14ch;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.ship-position-add-position {
  font-size: 6ch;
}

.ship-position-actor-token, .create-ship-position {
  cursor: pointer
}

.crew-list, .ship-positions-list {
  height: -webkit-fill-available;
}

.ship-grid input[type="text"] {
  width: 30ch;
  border: var(--s2d6-groove-border);
  border-radius: 0;
  height: 4ch;
}

.ship-grid > div textarea {
  width: 30ch;
  border: var(--s2d6-groove-border);
  border-radius: 0;
  height: 4ch;
  resize: none;
}

.ship-grid input.item-title {
  width: 28ch;
  height: fit-content;
  border: none;
}

.storage-wrapper {
  margin-top: 1%;
  margin-left: 3%;
  /* margin-bottom: 32px; */
  /*overflow-y: auto;*/
  /* height: 46%; */
  /* align-self: center; */
}

.grid-columns-double {
  display: grid;
  grid-template-columns: 50% 50%;
  /* grid-template-rows: 1fr; */
  gap: 1px;
  grid-template-areas:
    ". .";
  /* margin-left: 14px; */
  width: fit-content;
  align-items: center;
}

.grid-columns-single {
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr;
  gap: 1px;
  grid-template-areas:
    ".";
  /* margin-left: 12px; */
  width: fit-content;
}

.storage-stored-double {
  display: grid;
  grid-template-columns: 8.5em 5.5em 3em 3em 4em 3em;
  grid-template-rows: 1fr;
  gap: 1px;
  grid-template-areas:
    ". . . . . .";
}

.storage-stored-single {
  display: grid;
  grid-template-columns: 17em 11em 6em 6em 8em 6em;
  grid-template-rows: 1fr;
  gap: 1px;
  grid-template-areas:
    ". . . . . .";
}

.storage-header {
  /* border: 0 1px solid var(--s2d6-default-color); */
  background-color: var(--s2d6-default-color);
  color: var(--s2d6-item-active);
  position: sticky;
  top: 0%;
  z-index: 20;
  width: fit-content;
  height: fit-content;
}

.components-stored-double {
  display: grid;
  grid-template-columns: 10.5em 4em 2em 3.5em 3.5em 3em;
  grid-template-rows: 1fr;
  gap: 1px 0;
  grid-template-areas:
    ". . . . . .";
  padding: 1px;
}
/* ... */

